css/style.scss
#app-navigation-toggle {
    background-color: var(--color-background-darker);
    z-index: 100000;
}

#search {
    position: absolute;
    margin: 10px 0 0 10px;
    left: 0;
    top: 0;
    z-index: 10000;
}
#search-term {
    margin: 0;
    width: 350px;
    max-width: calc(100vw - 64px);
    padding-right: 80px;
    text-overflow: ellipsis;
}
@media only screen and (max-width: $breakpoint-mobile) {
    #search-term {
        // Account for navigation menu toggle on the top left
        margin-left: 44px;
    }
}

#search-submit {
    position: absolute;
    padding: 10px 19px;
    top: -2px;
    right: 38px;
    margin: 0;
    border: none;
    background-color: transparent;
}
#route-submit {
    position: absolute;
    padding: 10px 19px;
    right: 0;
    top: -2px;
    margin: 0;
    border: none;
    background-color: transparent;
}
#route-submit i {
    color: var(--color-main-text);
}

#routing-close:hover {
    background-color: white !important;
}
#routing-close {
    float: right;
    border: none;
    margin: 0px 10px 0px 0px !important;
}

#timeRangeSlider {
    position: absolute;
    margin: 10px 0 0 10px;
    left: 20%;
    top: 90%;
    z-index: 10000;
    width: 60%;
    height: 10px;
    background-color: var(--color-main-background) !important;
    box-shadow: none;
    display: none;
}
.noUi-handle::after,
.noUi-handle::before {
    height: 8px !important;
}
.noUi-handle {
    height: 20px !important;
    border-radius: 10px !important;
    background-color: var(--color-main-background) !important;
    box-shadow: inset 0 0 1px var(--color-background-dark), inset 0 1px 7px var(--color-background-dark), 0 3px 6px -3px var(--color-background-darker) !important;
}

.noUi-tooltip {
    display: none;
    z-index: 10001;
}
.noUi-active .noUi-tooltip {
    display: block;
    z-index: 10001;
}

.noUi-connect {
    background-color: var(--color-primary);
}
.timeRangeSlider-active {
    background-color: var(--color-warning, #b10610) !important;
}

#map {
    width: 100%;
    position: absolute;
    height: 100%;
}

#map *{
    box-sizing: content-box;
}

.leaflet-tooltip {
    white-space: normal !important;
}
.leaflet-container {
    background: var(--color-main-background);
}

.leaflet-control-layers-base {
    line-height: 30px;
}
.leaflet-control-layers-selector {
    min-height: 0px;
}
.leaflet-control-layers-toggle {
    background-size: 75% !important;
}
.leaflet-control-layers:not(.leaflet-control-layers-expanded) {
    width: 33px;
    height: 37px;
}
.leaflet-control-layers:not(.leaflet-control-layers-expanded) > a {
    width: 100%;
    height: 100%;
}

/* Adjust button styles to Nextcloud */
.leaflet-touch .leaflet-control-layers,
.leaflet-touch .leaflet-bar {
    border: none;
    border-radius: var(--border-radius);
}

/* Fix attribution overlapping map on mobile */
.leaflet-control-attribution.leaflet-control {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 50vw;
}

#place-contact-input {
    width: 70%;
}

#placeContactValidIcon {
    display: none;
}

#clickSearchAddress,
#click-search-popup-title {
    text-align: center;
}
#click-search-add-favorite,
#click-search-place-contact {
    margin-left: auto;
    margin-right: auto;
    display: block;
}
#clickSearchAddress,
#placeContactPopupAddress {
    border: none;
    width: 100%;
    height: 75px;
}

#opening-hours-table td {
    padding: 0 5px 0 5px;
}
#opening-hours-table {
    width: 100%;
    display: none;
}

#opening-hours-table-toggle-collapse {
    display: none;
}

#opening-hours-table-toggle-expand {
}

#app {
    width: 100%;
}

.inline-wrapper {
    display: flex;
}

.location-icon, .popup-icon {
    height: 20px;
    margin-right: 5px;
}

.location-icon {
    margin-top: 5px;
}

.location-header {
    font-weight: bold;
    word-wrap: break-word;
    word-break: break-all;
}

.location-city {
    color: gray;
}

.poi-open, .poi-closed, .poi-closes {
    font-weight: 600;
}

.poi-open {
    color: #46ba61;
}

.poi-closed {
    color: #e9322d;
}

.poi-closes {
    color: #ffcc44;
}

.poi-opens {

}

.opening-hours-table .opening-hours-day {
    padding-right: 5px;
}

.opening-hours-table .opening-hours-hours {
    padding-left: 5px;
}

tr.selected td {
    font-weight: bold;
}

.opening-hours {
    padding-left: 5px;
    margin-top: 5px !important;
    margin-bottom: 5px !important;
}

/* Overriden Leaflet Styles */
.leaflet-bottom.leaflet-left {
    display: block;
    z-index: 100000;
}
.leaflet-popup-content {
    margin: 7px 7px !important;
    color: var(--color-main-text);
}
.leaflet-popup-content button {
    min-height: 10px !important;
    height: 27px !important;
    padding: 3px 8px 3px 8px !important;
}
.leaflet-popup-content-wrapper, .leaflet-popup-tip {
    background-color: var(--color-main-background) !important;
}
.leaflet-bar {
    background-color: var(--color-main-background);
}
.leaflet-bar button, .leaflet-bar button:hover,
.leaflet-touch .leaflet-bar a, .leaflet-touch .leaflet-bar a:hover {
    background-color: var(--color-main-background);
    border: 1px solid var(--color-border-dark);
    color: var(--color-main-text);
}
.leaflet-bar button:hover, leaflet-bar a:hover {
  background-color: var(--color-background-darker);
}
.leaflet-control-layers {
    background-color: var(--color-main-background);
    color: var(--color-main-text);
}
/*.leaflet-top.leaflet-left {
    top: 50px;
}*/
.leaflet-popup-content h2, .leaflet-popup-content h3 {
    margin-bottom: 0px;
}

.leaflet-popup-content p.location-city {
    margin-top: 0px;
}

.leaflet-popup-content-wrapper {
    border-radius: 3px !important;
}
.trackPopup {
    max-width: 250px;
}
.getGpx {
    word-wrap: break-word;
}
.trackPopupTitle {
    text-align: center;
}

.device-over-marker {
    border-radius: 50%;
}

.leaflet-marker-contact.contact-marker:after {
    bottom: 18px;
    border-width: 12px 8px 0;
}
/* ... */

